k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xensql-queryvault
  labels:
    name: xensql-queryvault
    product-suite: ai-security
